--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,13 @@ body{font-size:14px;font-family:"Microsoft YaHei",Arial; overflow-x:hidden; over
 .clear:after{content:''; display:block; clear:both;}
 .left{float:left;}
 .right{float:right;}
-.viewport{max-width:640px;min-width:300px;margin:0 auto;}
+.viewport{max-width:640px;min-width:300px;margin:0 auto;overflow:hidden}
 /*header*/
 .header{height: 48px;line-height: 48px;background: #a2a2a2}
 .header .user{margin-left: 2%;}
-.header .user-name{background: url(../images/icon-user.png) no-repeat left center;background-size:30px 30px;line-height: 48px;display: inline-block;padding-left: 35px;color: #fff;}
+.header .user-name{background: url(http://sandbox.runjs.cn/uploads/rs/390/sdfgpat4/icon-user.png) no-repeat left center;background-size:30px 30px;line-height: 48px;display: inline-block;padding-left: 35px;color: #fff;}
 .header .edit{margin-right: 2%;}
-.header .edit-s{color: #fff;background: url(../images/icon-edit.png) no-repeat center;background-size:30px 30px;text-indent: -999em;display: inline-block;line-height: 48px;width: 30px;}
+.header .edit-s{color: #fff;background: url(http://sandbox.runjs.cn/uploads/rs/390/sdfgpat4/icon-edit.png) no-repeat center;background-size:30px 30px;text-indent: -999em;display: inline-block;line-height: 48px;width: 30px;}
 /*content*/
 .content{background: #f4f8fb;}
 .content .content-nav{width: 100%;border-bottom: 1px solid #ccc;height: 40px;line-height: 40px;}
@@ -28,7 +28,7 @@ body{font-size:14px;font-family:"Microsoft YaHei",Arial; overflow-x:hidden; over
 .content .content-nav li.act a,.content .content-nav li:hover a{color: #ff8951}
 .content .content-nav li span{font-size: 14px;color: #ababab;padding-left: 10px;}
 
-.list-wrapper{padding-bottom: 10px;display: none;}
+.list-wrapper{padding-bottom: 10px;display:none}
 .list-main{margin-bottom: 5px;}
 .list-main .img-view{padding: 5px;margin-right: 10px;}
 .list-main .img-view img{width: 100px;height: 100px;}
@@ -42,3 +42,14 @@ body{font-size:14px;font-family:"Microsoft YaHei",Arial; overflow-x:hidden; over
 .list-footer a.delete{width: 20%;color:#c51b03}
 .list-footer a.check{width: 58%;border-left: 1px solid #ccc;border-right: 1px solid #ccc;}
 .list-footer a.copy{width: 18%;}
+
+
+.view-conent{position:relative;width: 100%;height: 100%;-webkit-transform:translateX(0);transform:translateX(0);}
+#viewport.showNav .view-content{-webkit-transform:translateX(300px);transform:translateX(300px);transition:all 0.5s ease;-webkit-transition:all 0.5s ease;}
+
+.side{width: 300px;height: 670px;background: #333;position: absolute;top: 0;left: -300px;}
+.side-nr li a{color: #fff;}
+.side-nr{padding:5%;}
+.side-nr li{line-height: 2;padding: 3%}
+.side-nr li:hover{background: #222}
+.side-nr li span{color: #fff;font-weight: bold;cursor: pointer;}
